--- a/css/style.css
+++ b/css/style.css
@@ -95,13 +95,13 @@ body  {
   margin-top: 20px;
   margin-left: auto;
   margin-right: auto;
-  padding: 10px 40px;
+  /* padding: 10px 40px; */
   text-align: center;
   position: relative;
   opacity: .95;
   border-radius: 4px;
   border: 1px solid #e8e8e8;
-  box-shadow: 0 1px 0 rgba(0,0,0,.25);
+  box-shadow: 0 1px 0 rgba(0,0,0,.15);
 }
 
 @media all and (max-width: 400px) {
@@ -616,3 +616,30 @@ nav li a:hover {
 }
 
 .checkinslist h3 { color: #657B83; }
+
+
+form.ng-invalid {
+  border:1px solid red;
+  padding:5em;
+}
+
+
+form.ng-valid {
+  border:1px solid blue;
+  padding:5em;
+}
+
+form.ng-pristine {
+  border:1px solid green;
+  padding:5em;
+}
+
+form.ng-invalid button.btn {
+  background-color:#C61C6F;
+  opacity: .3;
+  cursor: default;
+}
+
+form.ng-valid button.btn {
+  background-color:#2D8BCF;
+}
